# stm32_ai

./: .gitignore  CMakeLists.txt  Kconfig  README.md  VERSION  prj.conf  root-rsa-2048.pem  stm32l475的mcuboot教程.md  sysbuild.conf
.claude/skills/stm32-zephyr-skills/: SKILL.md
.claude/skills/stm32-zephyr-skills/references/: Pandora_STM32L4_Hardware_Info.md  build-and-flash.md  devicetree-guide.md  peripheral-examples.md  project-template.md
boards/: pandora_stm32l475.overlay
drivers/sensor/: Kconfig
drivers/sensor/aht10/: Kconfig  aht10.c  aht10.h
drivers/sensor/ap3216c/: Kconfig  ap3216c.c  ap3216c.h
drivers/sensor/icm20608/: Kconfig  icm20608.c  icm20608.h
dts/bindings/: vendor-prefixes.txt
dts/bindings/sensor/: aosong,aht10.yaml  invensense,icm20608.yaml  liteon,ap3216c.yaml
include/: aht10_app.h  ap3216c_app.h  icm20608_app.h  sensor_data.h
src/: aht10_thread.c  ap3216c_thread.c  display_thread.c  icm20608_thread.c  led_thread.c  main.c  norflash_thread.c
sysbuild/: mcuboot.conf  mcuboot.overlay
